--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,11 @@
 @import "tailwindcss";
 
+@layer base {
+  h1 {
+    font-size: var(--text-4xl);
+  }
+}
+
 @theme {
   --animate-logo-spin: logo-spin infinite 20s linear;
 
